// Copyright 2025 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "private/proto/ide_info.proto";

option java_outer_classname = "BuilderProto";
option java_package = "com.intellij.aspect.testing.rules";

message BazelModule {
  string name = 1;
  string version = 2;
  string archive = 3;
}

message BazelBinary {
  string version = 1;
  string executable = 2;
}

message BuilderInput {
  string project_tar = 1;
  string output_file = 2;
  BazelBinary bazel = 3;

  repeated BazelModule modules = 4;
  repeated string aspects = 5;
  repeated string targets = 6;
}

message BuilderOutput {
  string bazel_version = 1;
  repeated string modules = 2;
  repeated TargetIdeInfo targets = 3;
}
